Make the button work
:D

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ description: A boilerplate for creating superb style guides
 
 The homepage of a style guide should provide high-level information around what the design system is, what benefits it provides, who it's for, and how to get started with it. Like any good index page, it should provide clear navigation to key parts of the website.
 
-<div class="u-margin-bottom-double"><a href="/getting-started.html" class="c-btn">Get Started</a></div>
+<div class="u-margin-bottom-double"><a href="/style-guide-guide/getting-started.html" class="c-btn">Get Started</a></div>
 
 ## Design System Benefits
 Explain how the design system benefits users and the business. For inspiration, check out over 180 examples of design systems at [Styleguides.io](http://styleguides.io/examples).
